welcome.lessons.welcome.array.island.Island.scala.error
island:18: error: missing arguments for method premier in class island;
follow this method with `_' if you want to treat it as a partially applied function
			var de:Int = deuxieme(num, premier, niv);
                                                   ^island:20: error: not found: value x
			return 1 + is(subTab(num, x, y), niv + 1) + is(subTab(num, y + 1, num.length - 1), niv); 
                                                  ^